--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>( 最大<%= @minimum_password_length %>文字 )</em>
+    <em>( 最小<%= @minimum_password_length %>文字 )</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
