--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -81,8 +81,14 @@ body {
         margin-left: 20px;
       }
     }
+
+    .postImage {
+      margin-top: 40px;
+      text-align: center;
+    }
     .postText{
-      margin: 20px 30px;
+      margin: 40px 30px;
+      text-align: center;
       color: #999;
     }
   
@@ -90,23 +96,25 @@ body {
     width: 85%;
     height: 100%;
     margin: 0 auto;
-    padding-top: 30px;
+
     &__title{
       display: block;
       width: 100%;
       height: 50px;
     }
+
     &__text{
       display: block;
       width: 100%;
       height: 50%;
-      margin-top: 15px;
+      border: 1px solid;
     }
     &__btn{
       display: block;
       width: 30%;
       margin: 15px auto 0;
     }
+
   }
   .user{
     padding: 15px 30px;
@@ -124,7 +132,6 @@ body {
     margin: 0 auto;
     font-size: 15px;
     margin-top: 40px;
-    margin-bottom: 40px;
   }
   .form__text {
     display: block;
@@ -142,5 +149,5 @@ body {
       width: 80px;
     }
   
-}
+  }
 }
