--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -2,5 +2,6 @@
 
 = form_with model: @post, local: true do |form|
   = form.text_field :title, placeholder: "タイトル", class: "form__title"
+  = form.file_field :image, class: "form__image"
   = form.text_area :content,  rows: "15", placeholder: "本文", class: "form__text"
   = form.submit '投稿', class: :form__btn
